--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,75 @@
-plugins {
-    id 'java'
+buildscript {
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
+
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
+allprojects {
+    apply plugin: "java"
+    apply plugin: 'java-library'
+
+    ext {
+        group = 'org.example'
+        version = '1.0-SNAPSHOT'
+    }
+    repositories {
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+
+    java {
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
+    }
+
+
+
+
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
-}
+subprojects {
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
+    tasks.withType(JavaCompile).configureEach {
+        options.encoding = 'UTF-8'
+    }
+
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+    }
+
+    dependencies {
+        implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.3'
+
+
+        compileOnly 'org.projectlombok:lombok:1.18.4'
+        annotationProcessor 'org.projectlombok:lombok:1.18.4'
+
+        // Use JUnit test framework
+        testImplementation 'junit:junit:4.12'
     }
 }
 
-dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.3'
-    // handle anki package
-    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
 
-    compileOnly 'org.projectlombok:lombok:1.18.4'
-    annotationProcessor 'org.projectlombok:lombok:1.18.4'
+project("ankitool-core") {
+    apply plugin: "maven-publish"
 
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    dependencies {
+        // handle anki package
+        implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+    }
+}
+
+project("ankitool-service") {
+    dependencies {
+        api project(":ankitool-core")
+
+    }
+
 }
