--- a/build.gradle
+++ b/build.gradle
@@ -61,15 +61,22 @@ project("ankitool-core") {
     apply plugin: "maven-publish"
 
     dependencies {
-        // handle anki package
-        implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+        api 'org.apache.commons:commons-math3:3.6.1'
+        api group: 'org.jetbrains', name: 'annotations', version: '24.0.1'
+
     }
 }
 
 project("ankitool-service") {
     dependencies {
         api project(":ankitool-core")
-
+        // handle anki package
+        implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
+        implementation 'io.github.openfeign:feign-jackson:11.1'
+        implementation 'io.github.openfeign:feign-core:11.1'
+        implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
+        implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
+        implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
     }
 
 }
